; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_index.c_read_index_extension.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_index.c_read_index_extension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"unknown extension %u.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.index_state*, i32, i8*, i32)* @read_index_extension to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_index_extension(%struct.index_state* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.index_state*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.index_state* %0, %struct.index_state** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %16 [
    i32 128, label %11
  ]

11:                                               ; preds = %4
  %12 = load %struct.index_state*, %struct.index_state** %6, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = call i32 @read_modifiers(%struct.index_state* %12, i8* %13, i32 %14)
  store i32 %15, i32* %5, align 4
  br label %20

16:                                               ; preds = %4
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @g_critical(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %16
  store i32 0, i32* %5, align 4
  br label %20

20:                                               ; preds = %19, %11
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i32 @read_modifiers(%struct.index_state*, i8*, i32) #1

declare dso_local i32 @g_critical(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
